<resources>
    <!-- Name for the application -->
    <string name="app_name">Inventory App</string>

    <!-- Catalog Activity -->

    <!-- Label for overfmenu_editormenu option that inserts dummy item data into the app -->
    <string name="insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overfmenu_editormenu option that deletes all item data in the app -->
    <string name="empty_inventory">Empty Inventory</string>

    <!-- Label for Empty view title text -->
    <string name="empty_title_text">No items in inventory</string>

    <!-- Label for Empty view subtitle text -->
    <string name="empty_subtitle_text">Add one</string>

    <!-- Editor Activity -->

    <!-- Title for the activity to add a new item -->
    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Title for the activity to edit an item -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Text hint for name field in the editor -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for image field in the editor -->
    <string name="hint_item_image">Image</string>

    <!-- Text hint for price field in the editor -->
    <string name="hint_item_price">Price</string>

    <!-- Text hint for price field in the editor -->
    <string name="hint_item_quantity">Quantity</string>

    <!-- Label for edimenu_editormenu option to save item and leave editor -->
    <string name="action_save">Save</string>

    <!-- Label for editor button that deletes the current item -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor button to order more of an item -->
    <string name="action_order">Order More</string>

    <!-- Label for editor button to increment quantity -->
    <string name="increment_quantity">+</string>

    <!-- Label for editor button to decrement quantity -->
    <string name="decrement_quantity">-</string>

    <!-- Error message for null values -->
    <string name="editor_error_msg">Please do not leave any field blank</string>

    <!-- Error message if item was not saved -->
    <string name="editor_save_item_fail">Could not save item.</string>

    <!-- Successfully saved item -->
    <string name="editor_save_item_success">Item saved</string>

    <!-- Dialog box message to inform user if they want to discard changes in the editor -->
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <!-- Currency -->
    <string name="currency_item_price">$</string>

    <!-- Delete dialog box -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <!-- Successfully deleted item from editor -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Failed to delete item from editor -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

</resources>
