<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">


    <!-- Name field -->
    <EditText
        android:id="@+id/edit_item_name"
        android:hint="@string/hint_item_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <!-- Image field -->
    <EditText
        android:id="@+id/edit_item_image"
        android:hint="@string/hint_item_image"
        android:inputType="text"
        style="@style/EditorFieldStyle" />

    <!-- Price field -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_currency"
            android:text="@string/currency_item_price"
            style="@style/EditorCurrencyStyle" />

        <EditText
            android:id="@+id/edit_item_price"
            android:hint="@string/hint_item_price"
            android:inputType="numberDecimal"
            style="@style/EditorFieldStyle" />

    </LinearLayout>

    <!-- Quantity -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edit_item_quantity"
            android:hint="@string/hint_item_quantity"
            android:inputType="number"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"/>

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/decrement_quantity"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/increment_quantity"
            android:layout_weight="1"
            />

    </LinearLayout>

    <!-- Delete and cancel buttons -->
    <LinearLayout
        android:id="@+id/delete_cancel_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/delete_item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_delete"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/order_item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_order"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>